# MARP-Guide-RAG-Chatbot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled  chunks.json  count_unique_documents.py  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: .safety-policy.yml  ci.yml
data/documents/: discovered_docs.json
docs/: ARCHITECTURE_DECISIONS.md  CITATION_ACCURACY_TESTING.md  CI_TOOLS.md  ENV_SETUP_GUIDE.md  PRE_COMMIT_SETUP.md  README_pyproject.md  SECURITY.md  Scrum_Artifacts.md  TEST_INFO.md  additional_feature_design.md  detailed_architecture.md  future_features_plan.md  sprint-2-plan.md  test_catalogue.md
docs/events/: EvCA (1).json  EvCa_explanation.md  EvCa_explanation.txt  Event Flow Diagram.drawio  README_EVENT.md
docs/retrospectives/: sprint-1-retrospective.md  sprint-2-retrospective.md
docs/services/: ARCHITECTURE.md  Auth
scripts/: wait-for-services.sh
services/: __init__.py
services/auth/: Dockerfile  requirements.txt
services/chat/: API_BEFORE_AFTER.md  ARCHITECTURE_DIAGRAM.md  Dockerfile  MULTI_LLM_GUIDE.md  QUICK_START_MULTI_LLM.md  TESTING_GUIDE.md  requirements.txt
services/extraction/: Dockerfile  requirements.txt
services/indexing/: Dockerfile  requirements.txt
services/ingestion/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  compose.yaml  requirements.txt
services/retrieval/: Dockerfile  README.md  README_RETRIEVAL.md  requirements.txt  (+1 more)
tests/: CI_TOOLS.md  TEST_INFO.md  requirements-test.txt  test_catalogue.json
(+95 files in other folders)
